<resources>
    <string name="app_name">HoloTube</string>
    <string name="video_thumbnail_description">Video Thumbnail</string>
    <string name="channel_profile_picture_description">Channel Profile Picture</string>
    <string name="stream_start_time_diff"> Started streaming %1$s %2$s ago </string>
    <string name="upcoming_time_diff"> Live in %1$s %2$s </string>
    <string name="hours">hour</string>
    <string name="minutes">minute</string>
    <string name="viewCount">%1$s Watching\t\t\t</string>
    <string name="scheduledStart"> Scheduled for %1$s\t - \t</string>
    <string name="menuLiveLabel">Live</string>
    <string name="menuUpcomingLabel">Upcoming</string>
    <string name="following">Following</string>
    <string name="top_appbar_menu_filter">Filter</string>
    <string name="no_connection">No Connection</string>
    <string name="follow_button">Follow \n %1$s</string>
    <string name="unfollow_button">Unfollow \n %1$s</string>
    <string name="unfollow">Unfollow</string>
    <string name="sort_by">Sort By</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
    <string name="view_count_low_to_high">View Count (Low to High)</string>
    <string name="view_count_high_to_low">View Count (High to Low)</string>
    <string name="most_recent">Most Recent</string>
    <string name="earliest_start_time">Longest Uptime</string>
    <string name="starting_soon">Starting Soon</string>
    <string name="furthest_start">Furthest Start</string>
    <string name="channel_is_live">Channel is live</string>
    <string name="no_connection_description">No connection</string>
</resources>