<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.holotube.live.ChannelViewModel" />

        <variable
            name="fragment"
            type="com.holotube.live.LiveFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hapticFeedbackEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/live_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:listDataLive="@{viewModel.channels.live}"
                tools:listitem="@layout/live_list_item" />


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/channel_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_dim"
            android:visibility="gone">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/channel_profile_picture"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        tools:src="@mipmap/profilepic" />

                    <Button
                        android:id="@+id/follow_unfollow_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundColor"
                        android:fontFamily="@font/roboto_medium"
                        tools:text="Follow/Unfollow \n Channel Name?" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:HoloApiStatus="@{viewModel.status}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/no_connection"
                app:tint="@color/mainTextColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/no_connection"
                android:textColor="?colorSecondaryVariant"
                android:textSize="24sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sort_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_dim"
            android:visibility="gone">

            <RadioGroup
                android:id="@+id/sort_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/sort_by"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/A_TO_Z"
                    style="@style/sortMenuStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/roboto"
                    android:text="@string/a_to_z" />

                <RadioButton
                    android:id="@+id/Z_TO_A"
                    style="@style/sortMenuStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/z_to_a" />

                <RadioButton
                    android:id="@+id/VIEWCOUNT_HIGH_TO_LOW"
                    style="@style/sortMenuStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_count_high_to_low" />

                <RadioButton
                    android:id="@+id/VIEWCOUNT_LOW_TO_HIGH"
                    style="@style/sortMenuStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_count_low_to_high" />

                <RadioButton
                    android:id="@+id/START_TIME_LOW_TO_HIGH"
                    style="@style/sortMenuStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_recent" />

                <RadioButton
                    android:id="@+id/START_TIME_HIGH_TO_LOW"
                    style="@style/sortMenuStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/earliest_start_time" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
